hphp/test/zend/good/Zend/tests/zend_signed_multiply-64bit.php.skipif
<?php
<<__EntryPoint>> function main() {
if ((1 << 31) < 0) print "skip Running on 32-bit target";
}
