hphp/test/zend/bad/ext/date/tests/bug52062.php.skipif
<?php
if (PHP_INT_SIZE == 8) die('skip 32-bit only');
?>